--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.canvas-container {
+  height: '60px';
+  width: '20px';
+}
+
+.range-button {
+  border: '1px solid #20375B';
+  color: 'red';
 }
 
 .App-header {
@@ -21,13 +25,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
